0.67.5
------
1. Use same shade for all menu item separators.
2. Fix clipping of non-V style right arrow.
3. Dont draw 3D border around poup menus when border has been disabled, but
   shading set to 0%

0.67.4
------
 1. If drawing square scrollviews, give these a similar 3d effect to rounded ones.
 2. Move menuitem arrows 2 pixels to the left, to match KDE4 better.
 3. Fix button of non-editable combos when not etching entries.
 4. Fix spin buttons when not etching entries.
 5. Only do mouse over for entries if combos and spin widgets are unified.
 6. If not etching/shadowing, when mouse over set to 'glow' use 'thick coloured'
 7. If not etching/shadowing, decrease thinner scrollbar groove.
 8. Fix clipping of shaded button on combos when not etching/shadowing.
 9. Remove hard-coding of light border in progressbars - use gradient setting.
10. Slightly better button metrics when not etching/shadowing.

0.67.3
------
1. If a buttons requested size is not a multiple of 2, then shift the text 1
   pixel lower.
2. Fix plastik style mouse over on scrollbars.

0.67.2
------
1. Fix text placement in pushbuttons.
2. Set the insensitive foreground colour to the disabled text colour, and not
   the mid colour. Fixes appearance of disabled items in Mozilla apps.

0.67.1
------
1. Adjust Agua overlay if widget is not max rounded.
2. Fix flat/sunken/dashed splitter handles!
3. Fix check/radio position in Thunderbird2 menus.

0.67.0
------
1. Add option to draw insider border of inactive tabs.
2. Add option to draw double arrows for non-editable combos.
3. Add option to colour the sorted listview header.
4. Disable scrollbar buttons when at min/max - to match spin buttons.
5. Place non-V arrows of unified spin widgets closer together.
6. Increase the amount of rounding when round set to max.
7. Match gradient width/height to KDE4.
8. Only selected tabs need to fade to 100% alpha when using gradient backgrounds.