@@ -4,6 +4,7 @@
 2. Fix clipping of non-V style right arrow.
 3. Dont draw 3D border around poup menus when border has been disabled, but
    shading set to 0%
+4. Offset sunken slider thumbs to improve appearance.
 
 0.67.4
 ------
